add vitamin food and graphic class for polygon

--- a/Food.ini
+++ b/Food.ini
@@ -40,3 +40,87 @@ vitK = 0
 vitC = 0
 vitB = 0
 
+[Food4]
+code = r
+name = D
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 0
+vitD = 10
+vitE = 0
+vitK = 0
+vitC = 0
+vitB = 0
+
+[Food5]
+code = t
+name = E
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 0
+vitD = 0
+vitE = 10
+vitK = 0
+vitC = 0
+vitB = 0
+
+[Food6]
+code = y
+name = k
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 0
+vitD = 0
+vitE = 0
+vitK = 10
+vitC = 0
+vitB = 0
+
+[Food7]
+code = u
+name = c
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 0
+vitD = 0
+vitE = 0
+vitK = 0
+vitC = 10
+vitB = 0
+
+[Food8]
+code = i
+name = B
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 0
+vitD = 0
+vitE = 0
+vitK = 0
+vitC = 0
+vitB = 10
+
+[Food9]
+code = o
+name = A
+protein = 0
+carb = 0
+fat = 0
+energy = 40
+vitA = 10
+vitD = 0
+vitE = 0
+vitK = 0
+vitC = 0
+vitB = 0
+
