set classs for interrupt

--- a/Diseas.ini
+++ b/Diseas.ini
@@ -1,29 +1,35 @@
 [Diseas1]
+name = diseasa
 code = diseasa
 symtom = symtomA
 attackpoint = vitA
 
 [Diseas2]
+name = diseasd
 code = diseasd
 symtom = symtomD
 attackpoint = vitD
 
 [Diseas3]
+name = disease
 code = disease
 symtom = symtomE
 attackpoint = vitE
 
 [Diseas4]
+name = diseask
 code = diseask
 symtom = symtomK
 attackpoint = vitK
 
 [Diseas5]
+name = diseasc
 code = diseasc
 symtom = symtomC
 attackpoint = vitC
 
 [Diseas6]
+name = diseasb
 code = diseasb
 symtom = symtomE
 attackpoint = vitB
@@ -39,4 +45,4 @@ rangevite = "(0.8,1.2)"
 rangevitk = "(0.8,1.2)"
 rangevitc = "(0.8,1.2)"
 rangevitb = "(0.8,1.2)"
-illnesslist = "{'vitA':'vitA','vitD':'vitD','vitE':'vitE','vitK':'vitK','vitC':'vitC','vitB':'vitB'}"
+illnesslist = "{'diseasa':'vitA','diseasd':'vitD','disease':'vitE','diseask':'vitK','diseasc':'vitC','diseasb':'vitB'}"
