test register rfid card

--- a/Food.ini
+++ b/Food.ini
@@ -1,5 +1,5 @@
 [Food1]
-code = q
+code = ['20','d6','11','7c','9b']
 name = protein
 protein = 80
 carb = 0
@@ -13,7 +13,7 @@ vitC = 0
 vitB = 0
 
 [Food2]
-code = w
+code = ['11','5b','34','5b','25']
 name = carb
 protein = 0
 carb = 80
@@ -27,7 +27,7 @@ vitC = 0
 vitB = 0
 
 [Food3]
-code = e
+code = ['95','e3','84','63','91']
 name = fat
 protein = 0
 carb = 0
@@ -41,7 +41,7 @@ vitC = 0
 vitB = 0
 
 [Food4]
-code = r
+code = ['fb','82','34','5b','16']
 name = D
 protein = 0
 carb = 0
@@ -55,7 +55,7 @@ vitC = 0
 vitB = 0
 
 [Food5]
-code = t
+code = ['92','24','31','5b','dc']
 name = E
 protein = 0
 carb = 0
