start test input

--- a/Body.ini
+++ b/Body.ini
@@ -1,6 +1,76 @@
-[Body]
-name = someone
-code = someone
+[Body1]
+name = male_1
+code = m1
+Adeprotein = 100
+Adecarb = 100
+Adefat = 100
+Adeenergy = 100
+AdevitA = 100
+AdevitD = 100
+AdevitE = 100
+AdevitK = 100
+AdevitC = 100
+AdevitB = 100
+
+[Body2]
+name = male_2
+code = m2
+Adeprotein = 100
+Adecarb = 100
+Adefat = 100
+Adeenergy = 100
+AdevitA = 100
+AdevitD = 100
+AdevitE = 100
+AdevitK = 100
+AdevitC = 100
+AdevitB = 100
+
+[Body3]
+name = male_3
+code = m3
+Adeprotein = 100
+Adecarb = 100
+Adefat = 100
+Adeenergy = 100
+AdevitA = 100
+AdevitD = 100
+AdevitE = 100
+AdevitK = 100
+AdevitC = 100
+AdevitB = 100
+
+[Body4]
+name = female_1
+code = f1
+Adeprotein = 100
+Adecarb = 100
+Adefat = 100
+Adeenergy = 100
+AdevitA = 100
+AdevitD = 100
+AdevitE = 100
+AdevitK = 100
+AdevitC = 100
+AdevitB = 100
+
+[Body5]
+name = female_2
+code = f2
+Adeprotein = 100
+Adecarb = 100
+Adefat = 100
+Adeenergy = 100
+AdevitA = 100
+AdevitD = 100
+AdevitE = 100
+AdevitK = 100
+AdevitC = 100
+AdevitB = 100
+
+[Body6]
+name = female_3
+code = f3
 Adeprotein = 100
 Adecarb = 100
 Adefat = 100
