--- a/Diseas.ini
+++ b/Diseas.ini
@@ -45,4 +45,4 @@ rangevite = "(0.8,1.2)"
 rangevitk = "(0.8,1.2)"
 rangevitc = "(0.8,1.2)"
 rangevitb = "(0.8,1.2)"
-illnesslist = "{'diseasa':'vitA','diseasd':'vitD','disease':'vitE','diseask':'vitK','diseasc':'vitC','diseasb':'vitB'}"
+illnesslist = {'diseasa':'vitA','diseasd':'vitD','disease':'vitE','diseask':'vitK','diseasc':'vitC','diseasb':'vitB'}
