add bodyshape function , add puttext function

--- a/Body.ini
+++ b/Body.ini
@@ -11,6 +11,7 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
 
 [Body2]
 name = male_2
@@ -25,6 +26,7 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
 
 [Body3]
 name = male_3
@@ -39,6 +41,7 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
 
 [Body4]
 name = female_1
@@ -53,6 +56,7 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
 
 [Body5]
 name = female_2
@@ -67,6 +71,7 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
 
 [Body6]
 name = female_3
@@ -81,3 +86,4 @@ AdevitE = 100
 AdevitK = 100
 AdevitC = 100
 AdevitB = 100
+bodyshape = body_shape
