--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-[Food43]
+[Food1]
 code = ['20', 'ee', '82', 'cb', '87']
 name = apple
 protein = 0.58
@@ -12,7 +12,7 @@ vitk = 0.0000049
 vitc = 0.0103
 vitb = 0.000091
 
-[Food44]
+[Food2]
 code = ['f7', '57', '83', 'cb', 'e8']
 name = banana
 protein = 1.29
@@ -26,7 +26,7 @@ vitk = 0.0000006
 vitc = 0.0103
 vitb = 0.000433
 
-[Food45]
+[Food3]
 code = ['b7', '12', '83', 'cb', 'ed']
 name = beef steak
 protein = 131
@@ -40,7 +40,7 @@ vitk = 0.0000064
 vitc = 0
 vitb = 0.00286
 
-[Food46]
+[Food4]
 code = ['22', 'e6', '82', 'cb', '8d']
 name = Beef T-bone
 protein = 104.7
@@ -54,7 +54,7 @@ vitk = 0.0000055
 vitc = 0
 vitb = 0.0027
 
-[Food47]
+[Food5]
 code = ['c9', '2c', '83', 'cb', 'ad']
 name = bread
 protein = 3.09
@@ -68,7 +68,7 @@ vitk = 0.0000014
 vitc = 0.0001
 vitb = 0.000032
 
-[Food48]
+[Food6]
 code = ['11', '5b', '34', '5b', '25']
 name = broccoli
 protein = 0.87
@@ -82,7 +82,7 @@ vitk = 0.0000315
 vitc = 0.0277
 vitb = 0.000054
 
-[Food49]
+[Food7]
 code = ['95', 'e3', '84', '63', '91']
 name = cabbage
 protein = 1.14
@@ -96,7 +96,7 @@ vitk = 0.0000676
 vitc = 0.0326
 vitb = 0.00011
 
-[Food50]
+[Food8]
 code = ['ad', 'ea', '80', 'cb', '0c']
 name = carrot
 protein = 0.47
@@ -110,7 +110,7 @@ vitk = 0.0000066
 vitc = 0.003
 vitb = 0.000069
 
-[Food51]
+[Food9]
 code = ['6c', 'e4', '7f', 'cb', '3c']
 name = egg
 protein = 7.03
@@ -124,21 +124,7 @@ vitk = 0.0000002
 vitc = 0
 vitb = 0.000095
 
-[Food52]
-code = ['92', '24', '31', '5b', 'dc']
-name = fish and chip
-protein = 
-carb = 
-fat = 
-energy = 0.00
-vita = 
-vitd = 
-vite = 
-vitk = 
-vitc = 
-vitb = 
-
-[Food53]
+[Food10]
 code = ['13', '75', '83', 'cb', '2e']
 name = french fries
 protein = 5.93
@@ -152,7 +138,7 @@ vitk = 0.000061
 vitc = 0.0019
 vitb = 0.000401
 
-[Food54]
+[Food11]
 code = ['fb', '82', '34', '5b', '16']
 name = fried chicken
 protein = 31.61
@@ -166,7 +152,7 @@ vitk = 0
 vitc = 0
 vitb = 0.000852
 
-[Food55]
+[Food12]
 code = ['20', 'd6', '11', '7c', '9b']
 name = guava
 protein = 1.4
@@ -180,7 +166,7 @@ vitk = 0.0000014
 vitc = 0.125
 vitb = 0.00061
 
-[Food56]
+[Food13]
 code = ['9b', '2f', '80', 'cb', 'ff']
 name = Hamburger
 protein = 14.7
@@ -194,21 +180,7 @@ vitk = 0.0000054
 vitc = 0
 vitb = 0
 
-[Food57]
-code = ['e9', '21', '81', 'cb', '82']
-name = hotdog
-protein = 
-carb = 
-fat = 
-energy = 0.00
-vita = 
-vitd = 
-vite = 
-vitk = 
-vitc = 
-vitb = 
-
-[Food58]
+[Food14]
 code = ['8d', 'c4', '82', 'cb', '00']
 name = ice cream
 protein = 3.63
@@ -222,36 +194,8 @@ vitk = 0.0000003
 vitc = 0.0009
 vitb = 0.000034
 
-[Food59]
-code = ['e3', 'c4', '92', 'ab', '1e']
-name = Ichitan
-protein = 
-carb = 
-fat = 
-energy = 0.00
-vita = 
-vitd = 
-vite = 
-vitk = 
-vitc = 
-vitb = 
-
-[Food60]
-code = ['34', 'aa', '80', 'cb', 'd5']
-name = kebab
-protein = 
-carb = 
-fat = 
-energy = 0.00
-vita = 
-vitd = 
-vite = 
-vitk = 
-vitc = 
-vitb = 
-
-[Food61]
-code = ['22', 'e6', '82', 'cb', '8d']
+[Food15]
+code = ['92', '24', '31', '5b', 'dc']
 name = lasagna
 protein = 49.49
 carb = 51.92
@@ -264,7 +208,7 @@ vitk = 0.0000311
 vitc = 0.0032
 vitb = 0.000558
 
-[Food62]
+[Food16]
 code = ['44', '25', '93', 'ab', '59']
 name = macaroni
 protein = 16.6
@@ -278,7 +222,7 @@ vitk = 0.0000254
 vitc = 0
 vitb = 0.000139
 
-[Food63]
+[Food17]
 code = ['c4', 'ee', '80', 'cb', '61']
 name = mango
 protein = 2.76
@@ -292,7 +236,7 @@ vitk = 0.0000141
 vitc = 0.1223
 vitb = 0.0004
 
-[Food64]
+[Food18]
 code = ['41', 'fb', '80', 'cb', 'f1']
 name = mashed potato
 protein = 3.99
@@ -306,7 +250,7 @@ vitk = 0.0000143
 vitc = 0
 vitb = 0.00029
 
-[Food65]
+[Food19]
 code = ['76', 'bb', '83', 'cb', '85']
 name = onion
 protein = 0.11
@@ -319,4 +263,564 @@ vite = 0
 vitk = 0.0000002
 vitc = 0.0028
 vitb = 0.000046
+
+[Food20]
+code = ['44', 'bb', '80', 'cb', 'b4']
+name = pea
+protein = 1.76
+carb = 4.76
+fat = 0.13
+energy = 36.00
+vita = 0.000034
+vitd = 0
+vite = 0.00025
+vitk = 0.0000158
+vitc = 0.0378
+vitb = 0.000101
+
+[Food21]
+code = ['b3', '16', '83', 'cb', 'ed']
+name = peanut
+protein = 16.25
+carb = 10.16
+fat = 31.02
+energy = 357.00
+vita = 0
+vitd = 0
+vite = 0.00525
+vitk = 0
+vitc = 0
+vitb = 0.000219
+
+[Food22]
+code = ['15', '0a', '80', 'cb', '54']
+name = pizza
+protein = 35
+carb = 89.79
+fat = 37.68
+energy = 840.00
+vita = 0.000219
+vitd = 0
+vite = 0.00318
+vitk = 0.0000465
+vitc = 0
+vitb = 0.000321
+
+[Food23]
+code = ['aa', 'cf', '80', 'cb', '2e']
+name = popcorn
+protein = 3.4
+carb = 22.08
+fat = 1.19
+energy = 108.00
+vita = 0
+vitd = 
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0.000069
+
+[Food24]
+code = ['3b', 'b4', '83', 'cb', 'c7']
+name = pork chop
+protein = 32.4
+carb = 1.09
+fat = 14.58
+energy = 265.00
+vita = 0.000005
+vitd = 0
+vite = 0.00028
+vitk = 0
+vitc = 0
+vitb = 0.000675
+
+[Food25]
+code = ['1e', '6b', '80', 'cb', '3e']
+name = salad
+protein = 2.45
+carb = 20.23
+fat = 11.75
+energy = 196.00
+vita = 0.000024
+vitd = 0.0000001
+vite = 0.00085
+vitk = 0.0000179
+vitc = 0.001
+vitb = 0.000144
+
+[Food26]
+code = ['cb', '41', '80', 'cb', 'c1']
+name = sandwich
+protein = 22.6
+carb = 33.09
+fat = 15.35
+energy = 364.00
+vita = 0.000003
+vitd = 0
+vite = 0.00064
+vitk = 0.0000042
+vitc = 0
+vitb = 0.00032
+
+[Food27]
+code = ['e9', '21', '81', 'cb', '82']
+name = sphagetti
+protein = 31.52
+carb = 84.36
+fat = 21.05
+energy = 655.00
+vita = 0.000075
+vitd = 0
+vite = 0.00365
+vitk = 0.0000177
+vitc = 0.0043
+vitb = 0.00065
+
+[Food28]
+code = ['8a', '5e', '80', 'cb', '9f']
+name = strawberry
+protein = 1.34
+carb = 15.36
+fat = 0.6
+energy = 64.00
+vita = 0.000002
+vitd = 0
+vite = 0.00058
+vitk = 0.000044
+vitc = 0.1176
+vitb = 0.000109
+
+[Food29]
+code = ['db', '64', '80', 'cb', 'f4']
+name = suasage
+protein = 8.15
+carb = 0.64
+fat = 19.2
+energy = 210.00
+vita = 0
+vitd = 0.0000007
+vite = 0.00017
+vitk = 0
+vitc = 0
+vitb = 0.000029
+
+[Food30]
+code = ['16', 'c6', '7f', 'cb', '64']
+name = tangerine
+protein = 0.97
+carb = 16.01
+fat = 0.37
+energy = 64.00
+vita = 0.000041
+vitd = 0
+vite = 0.00024
+vitk = 0
+vitc = 0.032
+vitb = 0.000094
+
+[Food31]
+code = ['67', '1e', '80', 'cb', '32']
+name = tomato
+protein = 1.6
+carb = 7.08
+fat = 0.36
+energy = 33.00
+vita = 0.000076
+vitd = 0
+vite = 0.00098
+vitk = 0.0000144
+vitc = 0.0249
+vitb = 0.000146
+
+[Food32]
+code = ['3a', 'c3', '82', 'cb', 'b0']
+name = watermelon
+protein = 1.74
+carb = 21.59
+fat = 0.43
+energy = 86.00
+vita = 0.00008
+vitd = 0
+vite = 0.00014
+vitk = 0.0000003
+vitc = 0.0232
+vitb = 0.000129
+
+[Food33]
+code = ['be', 'e0', '7f', 'cb', 'ea']
+name = Noodles
+protein = 7.26
+carb = 40.26
+fat = 3.31
+energy = 221
+vita = 0.00001
+vitd = 0.0000002
+vite = 0.00027
+vitk = 0
+vitc = 0
+vitb = 0.000074
+
+[Food34]
+code = ['ee', 'e1', '7f', 'cb', 'bb']
+name = omelet
+protein = 6.45
+carb = 0.39
+fat = 7.11
+energy = 94.00
+vita = 0.000105
+vitd = 0.000001
+vite = 0.00079
+vitk = 0.0000027
+vitc = 0
+vitb = 0.000087
+
+[Food35]
+code = ['3c', '01', '83', 'cb', '75']
+name = Pancakes
+protein = 4.93
+carb = 21.79
+fat = 7.47
+energy = 175.00
+vita = 0.000042
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0.0002
+vitb = 0.000035
+
+[Food36]
+code = ['67', '9f', '83', 'cb', 'b0']
+name = Milk
+protein = 8.22
+carb = 12.18
+fat = 2.37
+energy = 102.00
+vita = 0.000034
+vitd = 0
+vite = 0.00002
+vitk = 0.0000002
+vitc = 0
+vitb = 0.00009
+
+[Food37]
+code = ['10', 'd3', '82', 'cb', '8a']
+name = Chocolate
+protein = 7.91
+carb = 99.1
+fat = 50.67
+energy = 885.00
+vita = 0.003
+vitd = 0
+vite = 0.00087
+vitk = 0.0000131
+vitc = 0
+vitb = 0.000068
+
+[Food38]
+code = ['00', '64', 'c0', '4f', 'eb']
+name = PADTHAI NOODLES
+protein = 16.99
+carb = 10.21
+fat = 0
+energy = 632.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food39]
+code = ['e3', 'c4', '92', 'ab', '1e']
+name = FRIED CRISPY PORK SKINS
+protein = 6.429
+carb = 0
+fat = 3.571
+energy = 57.10
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food40]
+code = ['71', 'b6', '92', 'ab', 'fe']
+name = GREEN CURRY SOUP
+protein = 2
+carb = 9
+fat = 29
+energy = 310.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food41]
+code = ['5c', 'fa', '91', 'ab', '9c']
+name = TOM YUM
+protein = 0
+carb = 5
+fat = 1
+energy = 36.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food42]
+code = ['33', '3a', '92', 'ab', '30']
+name = buffaro wing
+protein = 1
+carb = 2
+fat = 4.5
+energy = 50.00
+vita = 0.00006
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food43]
+code = ['6b', '37', '93', 'ab', '64']
+name = cooked white jasmine
+protein = 3
+carb = 33
+fat = 0
+energy = 150.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food44]
+code = ['97', '14', '92', 'ab', 'ba']
+name = chicken fried rice
+protein = 15
+carb = 50
+fat = 5
+energy = 310.00
+vita = 0.0009
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food45]
+code = ['24', 'f0', '92', 'ab', 'ed']
+name = roated chicken rice
+protein = 9
+carb = 88.21
+fat = 5.4
+energy = 449.00
+vita = 0.000809
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food46]
+code = ['4b', '26', '92', 'ab', '54']
+name = coconut water
+protein = 0.36
+carb = 1.85
+fat = 0.1
+energy = 10.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0.0012
+vitb = 0.000000016
+
+[Food47]
+code = ['00', '64', 'c0', '4f', 'eb']
+name = thai tea
+protein = 3.01
+carb = 40
+fat = 1.01
+energy = 189.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food48]
+code = ['f5', '1a', '80', 'cb', 'a4']
+name = coca cola
+protein = 0.24
+carb = 33.17
+fat = 0.17
+energy = 128.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food49]
+code = ['34', 'aa', '80', 'cb', 'd5']
+name = bubble tea
+protein = 0
+carb = 28.01
+fat = 1.49
+energy = 120.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food50]
+code = ['5b', '6d', '80', 'cb', '7d']
+name = orange juice
+protein = 0.6
+carb = 8.94
+fat = 0.17
+energy = 39.00
+vita = 0.000009
+vitd = 0
+vite = 0.00003
+vitk = 0.0000001
+vitc = 0.043
+vitb = 0.000034
+
+[Food51]
+code = ['bc', 'd2', '83', 'cb', '26']
+name = yogurt
+protein = 17.32
+carb = 6.12
+fat = 0.66
+energy = 100.00
+vita = 0.000002
+vitd = 0
+vite = 0.00002
+vitk = 0
+vitc = 0
+vitb = 0.000107
+
+[Food52]
+code = ['80', 'b3', '83', 'cb', '7b']
+name = chupa chup
+protein = 0
+carb = 12
+fat = 0
+energy = 50.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food53]
+code = ['00', '64', 'c0', '4f', 'eb']
+name = sticky rice
+protein = 6.01
+carb = 74.99
+fat = 0.5
+energy = 340.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food54]
+code = ['10', '1d', '80', 'cb', '46']
+name = snack cake
+protein = 1.46
+carb = 26.89
+fat = 4.85
+energy = 157.00
+vita = 0.000002
+vitd = 0
+vite = 0.00026
+vitk = 0.0000041
+vitc = 0
+vitb = 0
+
+[Food55]
+code = ['00', '64', 'c0', '4f', 'eb']
+name = watermelon juice
+protein = 2.02
+carb = 31
+fat = 0.5
+energy = 130.00
+vita = 0.00045
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0.072
+vitb = 0
+
+[Food56]
+code = ['6d', '1c', '83', 'cb', '39']
+name = pineapple
+protein = 1.3
+carb = 31.49
+fat = 0.29
+energy = 120.00
+vita = 0.000007
+vitd = 0
+vite = 0.00005
+vitk = 0.0000017
+vitc = 0.1147
+vitb = 0.000269
+
+[Food57]
+code = ['7e', 'e6', '89', 'ab', 'ba']
+name = cantaloupe
+protein = 1.68
+carb = 16.32
+fat = 0.38
+energy = 68.00
+vita = 0.000338
+vitd = 0
+vite = 0.0001
+vitk = 0.000005
+vitc = 0.0734
+vitb = 0.000144
+
+[Food58]
+code = ['24', '91', '80', 'cb', 'fe']
+name = shrimp
+protein = 17.09
+carb = 0
+fat = 0.43
+energy = 72.00
+vita = 0
+vitd = 0
+vite = 0
+vitk = 0
+vitc = 0
+vitb = 0
+
+[Food59]
+code = ['86', 'd8', '80', 'cb', '15']
+name = squid
+protein = 13.24
+carb = 2.62
+fat = 1.17
+energy = 78.00
+vita = 0.000008
+vitd = 0
+vite = 0.00102
+vitk = 0
+vitc = 0.004
+vitb = 0.000048
 
