body shape and Body.ini

--- a/Body.ini
+++ b/Body.ini
@@ -1,83 +1,89 @@
 [Body1]
-name = male_1
+name = male_4-8
 code = m1
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 19
+Adecarb = 208
+Adefat = 55.5
+Adeenergy = 1514
+AdevitA = 0.0004
+AdevitD = 0.000015
+AdevitE = 0.007
+AdevitK = 0.000055
+AdevitC = 0.025
+AdevitB = 0.001
+body_shape_function = body_shape
 
 [Body2]
-name = male_2
+name = male_9-13
 code = m2
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 34
+Adecarb = 273.5
+Adefat = 66
+Adeenergy = 1988
+AdevitA = 0.0006
+AdevitD = 0.000015
+AdevitE = 0.011
+AdevitK = 0.00006
+AdevitC = 0.045
+AdevitB = 0.001
+body_shape_function = body_shape
 
 [Body3]
-name = male_3
+name = male_14-18
 code = m3
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 52
+Adecarb = 376.5
+Adefat = 91.5
+Adeenergy = 2739
+AdevitA = 0.0009
+AdevitD = 0.000015
+AdevitE = 0.015
+AdevitK = 0.000075
+AdevitC = 0.075
+AdevitB = 0.001
+body_shape_function = body_shape
 
 [Body4]
-name = female_1
+name = female_4-8
 code = f1
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 19
+Adecarb = 199
+Adefat = 48
+Adeenergy = 1448
+AdevitA = 0.0004
+AdevitD = 0.000015
+AdevitE = 0.007
+AdevitK = 0.000055
+AdevitC = 0.025
+AdevitB = 0.001
+body_shape_function = body_shape
 
 [Body5]
-name = female_2
+name = female_9-13
 code = f2
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 35
+Adecarb = 249
+Adefat = 60
+Adeenergy = 1811
+AdevitA = 0.0006
+AdevitD = 0.000015
+AdevitE = 0.011
+AdevitK = 0.00006
+AdevitC = 0.045
+AdevitB = 0.001
+body_shape_function = body_shape
 
 [Body6]
-name = female_3
+name = female_14-18
 code = f3
-Adeprotein = 100
-Adecarb = 100
-Adefat = 100
-Adeenergy = 100
-AdevitA = 100
-AdevitD = 100
-AdevitE = 100
-AdevitK = 100
-AdevitC = 100
-AdevitB = 100
+Adeprotein = 46
+Adecarb = 233.5
+Adefat = 68.5
+Adeenergy = 2060
+AdevitA = 0.0007
+AdevitD = 0.000015
+AdevitE = 0.015
+AdevitK = 0.000075
+AdevitC = 0.065
+AdevitB = 0.001
+body_shape_function = body_shape
