--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,10 @@ protein = 0.58
 carb = 30.8
 fat = 0.38
 energy = 116
-vita = 0.000007
+vita = 0.000014
 vitd = 0
-vite = 0.0004
-vitk = 0.0000049
+vite = 0.0008
+vitk = 0.0000098
 vitc = 0.0103
 vitb = 0.000091
 
@@ -21,10 +21,10 @@ fat = 0.39
 energy = 105.00
 vita = 0.000004
 vitd = 0
-vite = 0.00012
-vitk = 0.0000006
+vite = 0.00024
+vitk = 0.0000012
 vitc = 0.0103
-vitb = 0.000433
+vitb = 0.0008
 
 [Food3]
 code = ['b7', '12', '83', 'cb', 'ed']
@@ -113,10 +113,10 @@ vitb = 0.000069
 [Food9]
 code = ['6c', 'e4', '7f', 'cb', '3c']
 name = egg
-protein = 7.03
+protein = 14.03
 carb = 0.4
 fat = 5.33
-energy = 80.00
+energy = 100.00
 vita = 0.00009
 vitd = 0.0000011
 vite = 0.00059
@@ -242,7 +242,7 @@ name = mashed potato
 protein = 3.99
 carb = 35.45
 fat = 6.82
-energy = 215.00
+energy = 225.00
 vita = 0.000104
 vitd = 0
 vite = 0.00102
@@ -253,16 +253,16 @@ vitb = 0.00029
 [Food19]
 code = ['76', 'bb', '83', 'cb', '85']
 name = onion
-protein = 0.11
-carb = 0.93
-fat = 0.01
-energy = 15.00
+protein = 0.22
+carb = 1.86
+fat = 0.02
+energy = 30.00
 vita = 0
 vitd = 0
 vite = 0
-vitk = 0.0000002
-vitc = 0.0028
-vitb = 0.000046
+vitk = 0.000001
+vitc = 0.0056
+vitb = 0.000099
 
 [Food20]
 code = ['44', 'bb', '80', 'cb', 'b4']
@@ -281,10 +281,10 @@ vitb = 0.000101
 [Food21]
 code = ['b3', '16', '83', 'cb', 'ed']
 name = peanut
-protein = 16.25
-carb = 10.16
-fat = 31.02
-energy = 357.00
+protein = 32.25
+carb = 20.16
+fat = 30.02
+energy = 107.00
 vita = 0
 vitd = 0
 vite = 0.00525
@@ -354,7 +354,7 @@ name = sandwich
 protein = 22.6
 carb = 33.09
 fat = 10.35
-energy = 264.00
+energy = 224.00
 vita = 0.000003
 vitd = 0
 vite = 0.00064
@@ -509,7 +509,7 @@ protein = 7.91
 carb = 99.1
 fat = 50.67
 energy = 885.00
-vita = 0.003
+vita = 0.001
 vitd = 0
 vite = 0.00087
 vitk = 0.0000131
@@ -562,9 +562,9 @@ vitb = 0
 code = ['5c', 'fa', '91', 'ab', '9c']
 name = TOM YUM
 protein = 0
-carb = 5
-fat = 1
-energy = 36.00
+carb = 20
+fat = 4
+energy = 144.00
 vita = 0
 vitd = 0
 vite = 0
@@ -575,10 +575,10 @@ vitb = 0
 [Food42]
 code = ['33', '3a', '92', 'ab', '30']
 name = buffaro wing
-protein = 1
+protein = 5
 carb = 2
-fat = 4.5
-energy = 50.00
+fat = 2.5
+energy = 100.00
 vita = 0.00006
 vitd = 0
 vite = 0
@@ -592,7 +592,7 @@ name = cooked white jasmine
 protein = 3
 carb = 33
 fat = 0
-energy = 150.00
+energy = 180.00
 vita = 0
 vitd = 0
 vite = 0
@@ -631,16 +631,16 @@ vitb = 0
 [Food46]
 code = ['4b', '26', '92', 'ab', '54']
 name = coconut water
-protein = 0.36
+protein = 0.7
 carb = 1.85
-fat = 0.1
-energy = 10.00
+fat = 0.4
+energy = 50.00
 vita = 0
 vitd = 0
 vite = 0
 vitk = 0
-vitc = 0.0012
-vitb = 0.000000016
+vitc = 0.0024
+vitb = 0.000000032
 
 [Food47]
 code = ['00', '64', 'c0', '4f', 'eb']
@@ -660,9 +660,9 @@ vitb = 0
 code = ['f5', '1a', '80', 'cb', 'a4']
 name = coca cola
 protein = 0.24
-carb = 33.17
+carb = 40.17
 fat = 0.17
-energy = 128.00
+energy = 150.00
 vita = 0
 vitd = 0
 vite = 0
@@ -674,9 +674,9 @@ vitb = 0
 code = ['34', 'aa', '80', 'cb', 'd5']
 name = bubble tea
 protein = 0
-carb = 28.01
+carb = 48.01
 fat = 1.49
-energy = 120.00
+energy = 220.00
 vita = 0
 vitd = 0
 vite = 0
